# hnet

./: .gitignore  .gitmodules  LICENSE  README.md  demo.py  evaluate.py  generate.py  prepare_data.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  train.py
configs/: hnet_1stage_L.json  hnet_1stage_XL.json  hnet_2stage_L.json  hnet_2stage_XL.json  hnet_2stage_XL_chinese.json  hnet_2stage_XL_code.json
hnet/: __init__.py
hnet/models/: __init__.py  config_hnet.py  hnet.py  mixer_seq.py
hnet/modules/: __init__.py  block.py  dc.py  isotropic.py  mha.py  mlp.py  rotary.py  utils.py
